Dependency updates and get graalvm working